; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_GetNextTempTableSpace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_GetNextTempTableSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numTempTableSpaces = common dso_local global i64 0, align 8
@nextTempTableSpace = common dso_local global i64 0, align 8
@tempTableSpaces = common dso_local global i32* null, align 8
@InvalidOid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetNextTempTableSpace() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @numTempTableSpaces, align 8
  %3 = icmp sgt i64 %2, 0
  br i1 %3, label %4, label %15

4:                                                ; preds = %0
  %5 = load i64, i64* @nextTempTableSpace, align 8
  %6 = add nsw i64 %5, 1
  store i64 %6, i64* @nextTempTableSpace, align 8
  %7 = load i64, i64* @numTempTableSpaces, align 8
  %8 = icmp sge i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %4
  store i64 0, i64* @nextTempTableSpace, align 8
  br label %10

10:                                               ; preds = %9, %4
  %11 = load i32*, i32** @tempTableSpaces, align 8
  %12 = load i64, i64* @nextTempTableSpace, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %1, align 4
  br label %17

15:                                               ; preds = %0
  %16 = load i32, i32* @InvalidOid, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %15, %10
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
